client/src/index.css
html {
  font-size: 62.5%;
  /* 16px * 62.5 = 10px = 1rem */
  box-sizing: border-box;
}

/* @font-face {
  font-family: "font";
  src: url("Cocomat Ultralight-trial.ttf");
} */

@font-face {
  font-family: "main_font";
  src: url("/fonts/Neou-Bold.otf");
}

body {
  font: 1.6rem Helvetica;
  font-family: "main_font";
  height: 100vh;
  margin: 0;
  background-color: #272727;
  color: white;
}

input, textarea, button:focus {
  outline: none;
}

main {
  margin: 0px 252px;
}

button {
  font-size: 1.6rem;
}

.full-width {
  width: 100%;
}

#root {
  height: 100%;
}

ul {
  padding: 0;
}

.home_page_img {
  border-radius: 15px;
  object-fit: cover;
  object-position: 50% 50%;
  width: 300px;
  height: 300px;
}

.grid-container {
  display: grid;
  grid-template-areas: "header" "main" "footer";
  grid-template-columns: 1fr;
  grid-template-rows: 16rem 1fr 5rem;
  height: 100%;
}

.brand a {
  color: #ffffff;
  font-size: 3rem;
  font-weight: bold;
  text-decoration: none;
}

.header-links a {
  color: #ffffff;
  text-decoration: none;
  padding: 1rem;
}

.header-links a:hover {
  background-color: #626262;
}

.main {
  grid-area: main;
  padding: 20px;
  /* margin */
  /* background-color: #5a5a5a; */
  background-color: #272727;
}

.footer {
  grid-area: footer;
  background-color: #333333;
  color: #ffffff;
  display: flex;
  justify-content: center;
  align-items: center;
}

a {
  text-decoration: none;
  color: white;
}

/* a:hover {
  background-color: #626262
} */

/* Sidebar */

.brand button {
  font-size: 3rem;
  padding: .5rem;
  background: none;
  border: none;
  color: #ffffff;
  cursor: pointer;
}

.sidebar {
  position: fixed;
  transition: all .5s;
  transform: translateX(-30rem);
  width: 30rem;
  background-color: #f0f0f0;
  height: 100%;
}

.sidebar.open {
  transform: translateX(0);
}

.sidebar-close-button {
  border-radius: 50%;
  border: .1rem #000000 solid;
  width: 3rem;
  height: 3rem;
  padding: .5rem;
  font-size: 2rem;
  padding-top: 0;
  cursor: pointer;
  position: absolute;
  right: .5rem;
  top: 1.5rem
}

/* Product Details */

.details {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-wrap: wrap;
  padding: 1rem;
}

.details-image {
  flex: 2 1 60rem;
}

/* .details-image {
  flex: 2 1 60rem;
  max-width: 34rem;
  max-height: 34rem;
  border-radius: 15px;
  object-fit: cover;
  object-position: 50% 50%;
  width: 300px;
  height: 300px;
} */

.details-image img {
  /* max-width: 60rem; */
  /* widows: 100%; */
  border-radius: 15px;
  object-fit: cover;
  object-position: 50% 50%;
  width: 500px;
  height: 500px;
}

.details-info {
  flex: 1 1 30rem;
}

.details-action {
  flex: 1 1 30rem;
}

.details-info ul, .details-action ul {
  list-style-type: none;
  padding: 0;
}

.details-info li, .details-action li {
  margin-bottom: 1rem;
}

.back-to-result {
  padding: 1rem;
}

.details-action {
  border: .1rem #808080 solid;
  border-radius: 0.5rem;
  background-color: #585858;
  padding: 1rem;
}

.details-action ul li:last-child {
  display: flex;
  flex-direction: column;
}

.button {
  padding: 1rem;
  border: .1rem #808080 solid;
  border-radius: 0.5rem;
  cursor: pointer;
}

.button:hover {
  border: .1rem #404040 solid;
}

.button.primary {
  background-color: #9e9e9e;
}

.button.secondary {
  background-color: #797979;
}

.text-center {
  text-align: center;
}

/* Cart */

.cart {
  display: flex;
  flex-wrap: wrap;
  margin: 1rem;
  align-items: flex-start;
}

.cart-list {
  flex: 3 1 60rem;
}

.cart-action {
  /* flex: 1 1 20rem; */
  /* background-color: #f0f0f0;
  border-radius: .5rem;
  padding: 1rem; */
  border: .1rem #808080 solid;
  border-radius: 0.5rem;
  background-color: #585858;
  padding: 1rem;
}

.cart-list-container {
  padding: 0;
  list-style-type: none;
  padding: 1rem;
}

.cart-list-container li {
  display: flex;
  justify-content: space-between;
  padding-bottom: 1rem;
  margin-bottom: 1rem;
  border-bottom: .1rem #c0c0c0 solid;
}

.cart-list-container li img {
  max-width: 10rem;
  max-height: 10rem;
  border-radius: 8px;
  margin-right: 10px;
}

.cart-list-container li:first-child {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}

.cart-image {
  flex: 1 1;
}

.cart-name {
  flex: 8 1;
}

.cart-price {
  flex: 1 1;
  font-size: 2.5rem;
  text-align: right;
}

/* form {
  display: flex;
  flex-direction: column;
} */

.input_i {
  margin: 10px 0px;
  padding: 10px;
  font-size: 16px;
  border-radius: 5px;
  border: 1px silver solid;
  /* border: 0px; */
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  /* box-shadow: 1px 1px 10px #555 inset */
  /* outline: none; */
  /* box-shadow: border-box; */
  /* box-shadow: -4px -4px 10px rgba(255, 255, 255, 1), inset 4px 4px 10px rgba(0, 0, 0, 0.2), inset -4px -4px 10px rgba(255, 255, 255, 1), 4px 4px 10px rgba(0, 0, 0, 0.2); */
}

textarea {
  resize: none;
  height: 100px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* forms */

.form {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.form-container {
  display: flex;
  flex-direction: column;
  width: 32rem;
  padding: 2rem;
  border: .1rem #c0c0c0 solid;
  background-color: #5a5a5a;
  border-radius: .5rem;
  list-style-type: none;
}

.form-container li {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

input {
  padding: 1rem;
  border: .1rem #c0c0c0 solid;
  border-radius: .5rem;
}

/* Products */

.product-header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.content-margined {
  margin: 1rem;
}

.table {
  width: 100%;
  border-radius: 5px;
}

th {
  text-align: left;
}

td {
  background-color: #626262;
  /* padding-left: 12px; */
  padding: 10px;
}

tbody>tr:nth-child(odd) {
  background-color: #f0f0f0;
}

/* Checkout Steps */

.checkout-steps {
  display: flex;
  justify-content: space-between;
  width: 40rem;
  margin: 1rem auto;
}

.checkout-steps>div {
  border-top: .3rem #c0c0c0 solid;
  color: #c0c0c0;
  flex: 1 1;
  padding-top: 1rem;
}

.checkout-steps>div.active {
  border-top: .3rem white solid;
  color: white;
  /* border: 10px solid; */
  /* border-image-source: linear-gradient(45deg, rgb(0, 143, 104), rgb(250, 224, 66)); */
  /* border-image-slice: 1; */
  /* border-width: .3rem 0 0 0; */
}

/* Place Order */

.placeorder {
  display: flex;
  flex-grow: wrap;
  padding: 1rem;
  justify-content: space-between;
  color: white;
  /* background-color: #737373; */
}

.placeorder-info {
  flex: 3 1 60rem;
}

.placeorder-action {
  flex: 1 1 20rem;
  border: .1rem #c0c0c0 solid;
  border-radius: .5rem;
  background-color: #fcfcfc;
  padding: 1rem;
  background-color: #5a5a5a;
  height: 553px;
}

.placeorder-info>div {
  border: .1rem #c0c0c0 solid;
  border-radius: .5rem;
  background-color: #fcfcfc;
  padding: 1rem;
  margin: 1rem;
  background-color: #5a5a5a;
}

.placeorder-info>div:first-child {
  margin-top: 0;
}

.placeorder-action>ul {
  padding: 0;
  list-style-type: none;
}

.placeorder-action>ul>li {
  display: flex;
  justify-content: space-between;
  margin-bottom: 1rem;
}

.placeorder-action>ul>li:last-child {
  font-size: 2rem;
  font-weight: bold;
  color: white;
}

.placeorder-actions-payment>div {
  width: 100%;
}

/* Profile */

.profile {
  display: flex;
  flex-wrap: wrap;
}

.profile-info {
  flex: 1 1 30rem;
}

.profile-orders {
  flex: 3 1 60rem;
}

/* admin */

.dropdown {
  display: inline-block;
  position: relative;
}

.dropdown-content {
  position: absolute;
  display: none;
  right: 0;
  padding: 1rem;
  list-style-type: none;
  z-index: 1;
  background-color: #333333;
  margin: 0;
  border-radius: 5px;
  /* margin-top: 0.4rem; */
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.dropdown:hover .dropdown-content {
  display: flex;
  flex-direction: column;
}

.dropdown-nav {
  display: inline-block;
  position: relative;
}

.dropdown-nav-content {
  position: absolute;
  display: none;
  left: 0;
  padding: 1rem;
  list-style-type: none;
  z-index: 1;
  background-color: #333333;
  margin: 0;
  border-radius: 5px;
  /* margin-top: 0.4rem; */
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.dropdown-nav:hover .dropdown-nav-content {
  display: flex;
  flex-direction: column;
}

/* filter */

/* .filter {
  display: flex;
  list-style-type: none;
  padding: 0;
  margin: 1rem auto;
  max-width: 45rem;
  justify-content: center;
  align-items: center;
}

.filter input, .filter button, .filter select {
  padding: 1rem;
  border-radius: 0.5rem;
  border: .1rem #c0c0c0 solid;
  font-size: 1.6rem;
  margin-right: 5px;
} */

.categories {
  padding: 0;
  list-style-type: none;
}

.categories a {
  display: flex;
  padding: 1rem;
}

.categories a:hover {
  background-color: #c0c0c0;
}

/* Slide Show */

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: Arial;
}

/* The grid: Four equal columns that floats next to each other */

.column {
  float: left;
  width: 25%;
  padding: 10px;
}

/* Style the images inside the grid */

.column img {
  opacity: 0.8;
  cursor: pointer;
  height: unset;
}

.column img:hover {
  opacity: 1;
}

/* Clear floats after the columns */

.row:after {
  content: "";
  display: table;
  clear: both;
}

/* The expanding image container */

.container {
  position: relative;
  display: none;
}

/* Expanding image text */

#imgtext {
  position: absolute;
  bottom: 15px;
  left: 15px;
  color: white;
  font-size: 20px;
}

/* Closable button inside the expanded image */

.closebtn {
  position: absolute;
  top: 10px;
  right: 15px;
  color: white;
  font-size: 35px;
  cursor: pointer;
}

